force-app/main/default/objects/Timetable__c/Timetable__c.object-meta.xml
<CustomObject>
    <label>Timetable</label>
    <nameField>
        <displayFormat>TID-{0000}</displayFormat>
        <label>Timetable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timetables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>