force-app/main/default/objects/Timetable__c/fields/Faculties__c.field-meta.xml
<CustomField>
    <fullName>Faculties__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Faculties</label>
    <referenceTo>Faculties__c</referenceTo>
    <relationshipLabel>Timetables</relationshipLabel>
    <relationshipName>Timetables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>