force-app/main/default/objects/Timetable__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <formula>Faculties__r.Subject__r.Name</formula>
    <label>Subject Name</label>
    <type>Text</type>
</CustomField>