force-app/main/default/objects/Timetable__c/fields/Subject_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Subject_Time_Slot__c</fullName>
    <label>Subject Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 - 11</fullName>
                <default>true</default>
                <label>9 AM - 11 AM</label>
            </value>
            <value>
                <fullName>12 - 1</fullName>
                <label>12 PM - 1 PM</label>
            </value>
            <value>
                <fullName>2 - 4</fullName>
                <label>2 PM - 4 PM</label>
            </value>
            <value>
                <fullName>4 - 6</fullName>
                <label>4 PM - 6 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>