force-app/main/default/objects/Timetable__c/validationRules/Course_End_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_End_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Scheduled_Date__c &gt;  Course__r.End_Date__c</errorConditionFormula>
    <errorMessage>Course has already ended</errorMessage>
</ValidationRule>